k8s/overlays/dev/patch-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /readyz
              port: 8000
            failureThreshold: 120
            periodSeconds: 10
          resources:
            requests:
              cpu: 300m
              memory: 768Mi
            limits:
              cpu: 1
              memory: 2Gi
